Revert temp buildtime changes